--- a/src/Group3/App.config
+++ b/src/Group3/App.config
@@ -1,9 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<connectionStrings>
+	<configSections>
+  <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+   <section name="Group3.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+  </sectionGroup>
+ </configSections>
+ <connectionStrings>
 		<add name="DbCafe" connectionString="Server=DESKTOP-HEENP7A;Database=MyCafeGroup3;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
+    <userSettings>
+        <Group3.Properties.Settings>
+            <setting name="email" serializeAs="String">
+                <value/>
+            </setting>
+            <setting name="password" serializeAs="String">
+                <value/>
+            </setting>
+        </Group3.Properties.Settings>
+    </userSettings>
 </configuration>
