--- a/src/Group3/packages.config
+++ b/src/Group3/packages.config
@@ -1,5 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net48" />
   <package id="Dapper" version="2.0.143" targetFramework="net472" />
-  <package id="Guna.UI2.WinForms" version="2.0.4.4" targetFramework="net472" />
+  <package id="DeviceId" version="6.3.0" targetFramework="net472" />
+  <package id="Guna.UI2.WinForms" version="2.0.4.4" targetFramework="net472" requireReinstallation="true" />
+  <package id="MailKit" version="4.1.0" targetFramework="net48" />
+  <package id="MetroFramework" version="1.2.0.3" targetFramework="net472" />
+  <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net472" />
+  <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net472" />
+  <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net472" />
+  <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Setup.Configuration.Interop" version="3.6.2115" targetFramework="net48" />
+  <package id="MimeKit" version="4.1.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Formats.Asn1" version="7.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
