--- a/src/Group3/Group3.csproj
+++ b/src/Group3/Group3.csproj
@@ -149,13 +149,13 @@
     <Compile Include="Home\Product\Product.Designer.cs">
       <DependentUpon>Product.cs</DependentUpon>
     </Compile>
-    <Compile Include="Log\Account\User.cs" />
+    <Compile Include="FrSigin\Account\User.cs" />
     <Compile Include="Method\ConverMoney.cs" />
-    <Compile Include="Log\Log.cs">
+    <Compile Include="FrSigin\FrSigin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Log\Log.Designer.cs">
-      <DependentUpon>Log.cs</DependentUpon>
+    <Compile Include="FrSigin\FrSigin.Designer.cs">
+      <DependentUpon>FrSigin.cs</DependentUpon>
     </Compile>
     <Compile Include="Method\MailServer.cs" />
     <Compile Include="Method\MulitiLabel.cs" />
@@ -191,8 +191,8 @@
     <EmbeddedResource Include="Home\Product\Product.resx">
       <DependentUpon>Product.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Log\Log.resx">
-      <DependentUpon>Log.cs</DependentUpon>
+    <EmbeddedResource Include="FrSigin\FrSigin.resx">
+      <DependentUpon>FrSigin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewFolder1\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
